--- a/app/assets/stylesheets/components/_avatars.scss
+++ b/app/assets/stylesheets/components/_avatars.scss
@@ -8,8 +8,9 @@
 }
 
 .avatar-very-large {
-  width: 250px;
+  width: 150px;
   border-radius: 50%;
+  text-align: center;
 }
 .avatar-bordered {
   width: 30px;
