--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -9,3 +9,11 @@
   border-color:rgba(0,0,0,0.2);
 }
 
+.btn-default {
+  color:#fff;
+  background-color:#2d4373;
+  border-color:rgba(0,0,0,0.2);
+  margin: 10px auto;
+}
+
+
