--- a/app/assets/stylesheets/components/_user.scss
+++ b/app/assets/stylesheets/components/_user.scss
@@ -1,3 +1,11 @@
-.box {
+.information {
+  background-color: grey;
+}
+
+.information h2 {
+  background-color: grey;
+}
+
+.information li {
   background-color: grey;
 }
