Photo upload and link from item owner photo to user page

--- a/app/assets/stylesheets/components/_media.scss
+++ b/app/assets/stylesheets/components/_media.scss
@@ -8,6 +8,11 @@
 .media-body img {
   width: 40%;
 }
+
+.media-body .avatar {
+  width: 30px;
+  border-radius: 50%;;
+}
 .media-aside {
   flex: 0 0 400px;
   padding: 30px;
