--- a/app/views/shared/_itemform.html.erb
+++ b/app/views/shared/_itemform.html.erb
@@ -10,6 +10,7 @@
   <%= f.input :price, as: :currency, label: "Price per day (€)" %>
   <%= f.input :ski_station %>
   <%= f.input :picture_url %>
+  <%= f.input :photo, as: :attachinary %>
   <%= f.button :submit, "Create this now!" %>
 <% end %>
 
