added search engine

--- a/app/views/shared/_banner.html.erb
+++ b/app/views/shared/_banner.html.erb
@@ -4,7 +4,7 @@
     <h2>Find cool gear near your place</h2>
       <form id="searchbox" method="get" action="/items">
         <select name="material_category">
-          <option value="skis" selected>Skis</option>
+          <option value="ski" selected>Skis</option>
           <option value="snowboard">Snowboard</option>
         </select>
         <input name="ski_station" type="text" placeholder="Where">
